Working initial version of user api
