# openapi_server/models/update_user.py
@@ -9,13 +9,11 @@ from openapi_server.models.base_model_ import Model
 from openapi_server.models.name import Name
 from openapi_server.models.phone_number import PhoneNumber
 from openapi_server.models.update_payment_amount import UpdatePaymentAmount
-from openapi_server.models.user_uuid import UserUUID
 from openapi_server import util
 
 from openapi_server.models.name import Name  # noqa: E501
 from openapi_server.models.phone_number import PhoneNumber  # noqa: E501
 from openapi_server.models.update_payment_amount import UpdatePaymentAmount  # noqa: E501
-from openapi_server.models.user_uuid import UserUUID  # noqa: E501
 
 class UpdateUser(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -23,13 +21,11 @@ class UpdateUser(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, new_payment_amount=None, user_uuid=None, country_code=None, area_code=None, phone_number=None, first_name=None, last_name=None):  # noqa: E501
+    def __init__(self, payment_amount=None, country_code=None, area_code=None, phone_number=None, first_name=None, last_name=None):  # noqa: E501
         """UpdateUser - a model defined in OpenAPI
 
-        :param new_payment_amount: The new_payment_amount of this UpdateUser.  # noqa: E501
-        :type new_payment_amount: float
-        :param user_uuid: The user_uuid of this UpdateUser.  # noqa: E501
-        :type user_uuid: str
+        :param payment_amount: The payment_amount of this UpdateUser.  # noqa: E501
+        :type payment_amount: float
         :param country_code: The country_code of this UpdateUser.  # noqa: E501
         :type country_code: int
         :param area_code: The area_code of this UpdateUser.  # noqa: E501
@@ -42,8 +38,7 @@ class UpdateUser(Model):
         :type last_name: str
         """
         self.openapi_types = {
-            'new_payment_amount': float,
-            'user_uuid': str,
+            'payment_amount': float,
             'country_code': int,
             'area_code': int,
             'phone_number': int,
@@ -52,8 +47,7 @@ class UpdateUser(Model):
         }
 
         self.attribute_map = {
-            'new_payment_amount': 'new_payment_amount',
-            'user_uuid': 'user_uuid',
+            'payment_amount': 'payment_amount',
             'country_code': 'country_code',
             'area_code': 'area_code',
             'phone_number': 'phone_number',
@@ -61,8 +55,7 @@ class UpdateUser(Model):
             'last_name': 'last_name'
         }
 
-        self._new_payment_amount = new_payment_amount
-        self._user_uuid = user_uuid
+        self._payment_amount = payment_amount
         self._country_code = country_code
         self._area_code = area_code
         self._phone_number = phone_number
@@ -81,46 +74,25 @@ class UpdateUser(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def new_payment_amount(self):
-        """Gets the new_payment_amount of this UpdateUser.
+    def payment_amount(self):
+        """Gets the payment_amount of this UpdateUser.
 
 
-        :return: The new_payment_amount of this UpdateUser.
+        :return: The payment_amount of this UpdateUser.
         :rtype: float
         """
-        return self._new_payment_amount
+        return self._payment_amount
 
-    @new_payment_amount.setter
-    def new_payment_amount(self, new_payment_amount):
-        """Sets the new_payment_amount of this UpdateUser.
+    @payment_amount.setter
+    def payment_amount(self, payment_amount):
+        """Sets the payment_amount of this UpdateUser.
 
 
-        :param new_payment_amount: The new_payment_amount of this UpdateUser.
-        :type new_payment_amount: float
+        :param payment_amount: The payment_amount of this UpdateUser.
+        :type payment_amount: float
         """
 
-        self._new_payment_amount = new_payment_amount
-
-    @property
-    def user_uuid(self):
-        """Gets the user_uuid of this UpdateUser.
-
-
-        :return: The user_uuid of this UpdateUser.
-        :rtype: str
-        """
-        return self._user_uuid
-
-    @user_uuid.setter
-    def user_uuid(self, user_uuid):
-        """Sets the user_uuid of this UpdateUser.
-
-
-        :param user_uuid: The user_uuid of this UpdateUser.
-        :type user_uuid: str
-        """
-
-        self._user_uuid = user_uuid
+        self._payment_amount = payment_amount
 
     @property
     def country_code(self):
